remove errors and warnings